external-crates/move/crates/move-compiler/tests/move_check/parser/borrow_mut_space.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/borrow_mut_space.move:5:20
  │
5 │     public fun foo(x: &mut S): &mut u64 {
  │                    ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/borrow_mut_space.move:6:15
  │
6 │         & mut x.f
  │               ^
  │               │
  │               Unexpected 'x'
  │               Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/borrow_mut_space.move:6:15
  │
6 │         & mut x.f
  │               ^
  │               │
  │               Unexpected 'x'
  │               Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/borrow_mut_space.move:6:15
  │
5 │     public fun foo(x: &mut S): &mut u64 {
  │                                -------- Expected: '&mut u64'
6 │         & mut x.f
  │               ^
  │               │
  │               Invalid return expression
  │               Given: '()'

